# soccer

./: .gitignore  CMakeLists.txt  Makefile
game/: Actor.cpp  Actor.h  Ball.cpp  Ball.h  Game.cpp  Game.h  GameWindow.cpp  GameWindow.h  Options.h  Player.cpp  Player.h  Position.cpp  Position.h  SoccerUtils.h  Speed.cpp  Speed.h  World.cpp  World.h  main.cpp
